--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Manipulación del DOM</title>
     <script src="main.js" defer></script>
     <script src="bd.js" defer></script>
-
 </head>
     <body>
         <section id="root">
-            <form id="datos_usuario"></form>
+            <form id="datos_usuario">
                 <!--<input onkeypress="hola()" onkeydown="hola()" onkeyup="hola()" type="text" name="usuario"> -->
                 <input type="text" name="usuario" placeholder="usuario">
                 <input type="text" name="contrasena" placeholder="contraseña">
-                <!--<button onclick="hola()" id="accion">Login</button> -->
-                <button id="accion" class="controls form-controls accionable">Login</button>
+                <!--<button onclick="hola()" id="accion">Login</button> -->                
+            </form>
+            <button id="accion" class="controls form-controls accionable">Login</button>
         </section>
         <section id="perfilUsuario"></section>
     </body>
